<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<parent>
	    <groupId>de.heuboe.c2vba.base</groupId>
	    <artifactId>c2vba-base-parent</artifactId>
	    <version>0.0.1</version>
	</parent>
	
	<groupId>de.heuboe.c2vba.datex2</groupId>
 	<artifactId>strategic-routing-publication</artifactId>
	<version>1.0.7</version>

	<name>DATEX II SRP Publisher for SRB</name>
	<description>Generates DATEX II strategic routing publications for SRB</description>
	
	<properties>
		<java.version>11</java.version>
		
        <additionalparam>-Xdoclint:none</additionalparam>
		<wls.version>4.5.3</wls.version>
		<datex2.wls.version>0.1.0</datex2.wls.version>
	</properties>

	<scm>  
		<url>https://gitlab.heuboe.hbintern/C2VBA/strategic-routing-publication</url>
		<connection>scm:git:git@gitlab.heuboe.hbintern:C2VBA/strategic-routing-publication.git</connection>
		<developerConnection>scm:git:git@gitlab.heuboe.hbintern:C2VBA/strategic-routing-publication.git</developerConnection>
    </scm>
    
 	<dependencies>
 	
 		<dependency>
			<groupId>de.heuboe.base</groupId>
			<artifactId>jhbBase</artifactId>
		</dependency>  
		
	    <!--  JAXB, JAXWS dependencies -->
		<dependency>
		    <groupId>javax.annotation</groupId>
		    <artifactId>javax.annotation-api</artifactId>
		</dependency>
		<dependency>
		    <groupId>javax.xml.bind</groupId>
		    <artifactId>jaxb-api</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.glassfish.jaxb</groupId>
		    <artifactId>jaxb-runtime</artifactId>
		</dependency>      
		<dependency>
    		<groupId>javax.xml.ws</groupId>
    		<artifactId>jaxws-api</artifactId>
		</dependency>
		<dependency>
		    <groupId>javax.jws</groupId>
		    <artifactId>jsr181-api</artifactId>
		    <version>1.0-MR1</version>
		</dependency>		


		<dependency>
		  	<groupId>commons-io</groupId>
		  	<artifactId>commons-io</artifactId>
		</dependency>
 	
		<dependency>
		    <groupId>com.google.guava</groupId>
		    <artifactId>guava</artifactId>
		    <version>31.1-jre</version>
		</dependency>
		
		<dependency>
			<groupId>de.heuboe.datex2</groupId>
			<artifactId>datex2-schema_2_3</artifactId>
			<version>1.3.6.1</version>
		</dependency>
		 
		<dependency>
			<groupId>de.heuboe.datex2</groupId>
			<artifactId>datex2Base</artifactId>
			<version>5.0.1</version>
			<exclusions>
				<exclusion>
				    <groupId>de.heuboe.base</groupId>
				    <artifactId>jhbBase</artifactId>
			    </exclusion>
			</exclusions>
		</dependency> 
		
		<dependency>
		    <groupId>de.heuboe.datex2</groupId>
		    <artifactId>datex2-push-client</artifactId>
		    <version>5.0.1</version>
		</dependency>

		<dependency>
			<groupId>de.heuboe.c2vba.data</groupId>
			<artifactId>c2vba-data</artifactId>
			<version>0.0.2</version>
		</dependency>

    	<dependency>
    		<groupId>org.apache.kafka</groupId>
    		<artifactId>kafka-clients</artifactId>
		</dependency>
		
		<dependency>
			<groupId>de.heuboe.kafka</groupId>
			<artifactId>kafka-tools</artifactId>
			<version>0.1.4</version>
		</dependency>
	
		<dependency>
			<groupId>de.heuboe.datex2</groupId>
		 	<artifactId>datex2-wls</artifactId>
			<version>${datex2.wls.version}</version>
			<exclusions>
				<exclusion>
			  		<groupId>org.springframework</groupId>
  					<artifactId>spring-core</artifactId>
			    </exclusion>
			</exclusions>
			
		</dependency>
		 
		<dependency>
		    <groupId>de.heuboe.wls</groupId>
			<artifactId>wls-openlr</artifactId>
			<version>4.5.3</version>
		</dependency>

		<dependency>
		    <groupId>de.heuboe.wls</groupId>
			<artifactId>wls-openlr-plugin</artifactId>
			<version>4.5.3</version>
		</dependency>

		<!--  WLS -->
		
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-iface</artifactId>
		</dependency>

		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-lib</artifactId>
		</dependency>
		
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-util</artifactId>
			
			<exclusions>
				<exclusion>
					<groupId>xml-apis</groupId>
					<artifactId>xml-apis</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-roadmap</artifactId>
		</dependency>
		
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-roadmap-lib</artifactId>
		</dependency>
		
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-tmc</artifactId>
		</dependency>
		
		<dependency>
			<groupId>de.heuboe.sdbby</groupId>
			<artifactId>sdbby-interface</artifactId>
			<version>0.0.3</version>
		</dependency>
	
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-sdbby</artifactId>
			<version>4.5.0</version>
		</dependency>

		<dependency>
			<groupId>de.heuboe.sdbby</groupId>
			<artifactId>strategie-matching</artifactId>
			<version>1.0.6</version>   
		</dependency>

		<!-- Spring -->
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
				
			</exclusions>
		</dependency>
    	<dependency>
        	<groupId>org.springframework.boot</groupId>
        	<artifactId>spring-boot-starter-web</artifactId>
    	</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-mongodb</artifactId>
		</dependency>
		
		<dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-registry-prometheus</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
		  	<groupId>net.devh</groupId>
		  	<artifactId>grpc-client-spring-boot-starter</artifactId>
		  	<version>2.10.1.RELEASE</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-log4j2</artifactId>
		</dependency>

		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
		

	</dependencies>
	
	
	<build>
		<plugins>
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-resources-plugin</artifactId>
			    <version>3.3.1</version>
			</plugin>
		
			<plugin>
				<groupId>org.jvnet.jaxb2.maven2</groupId>
				<artifactId>maven-jaxb2-plugin</artifactId>
				<version>0.8.3</version>
				
				<executions>
					<execution>
				    	<id>srp</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<schemaDirectory>src/main/resources/d2Schema</schemaDirectory>
							<schemaIncludes>
							    <include>StrategicRouting_withSubscriptionLifecycle-c2vba.xsd</include>
							</schemaIncludes>
						    <generatePackage>eu.datex2.schema._2._2_0.srp</generatePackage>
						</configuration>
					</execution>
					
				</executions>
				<dependencies>
					<dependency>
					    <groupId>com.sun.activation</groupId>
					    <artifactId>javax.activation</artifactId>
						<version>1.2.0</version>
					</dependency>
				</dependencies>				
				
			</plugin>
			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>jib-maven-plugin</artifactId>
				<executions>
					<!-- Optional -->
					<!-- Build a tar file to allow local inspection -->
					<execution>
						<id>docker-build-tar</id>
						<phase>package</phase>
						<goals>
							<goal>buildTar</goal>
						</goals>
					</execution>
					<!-- Required -->
					<!-- Upload the image to the registry -->
					<execution>
						<id>docker-build</id>
						<phase>deploy</phase>
						<goals>
							<goal>build</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<from>
						<image>${docker.registry}/eclipse-temurin:17-jre-alpine</image>
						<!--<image>${docker.registry}/adoptopenjdk/openjdk11:alpine-jre</image>
						 ${docker.registry} is set via settings.xml 
						<image>${docker.registry}/eclipse-temurin:17-jre-alpine</image>
						-->
					</from>
					<to>
						<!-- This change is important -->
						<image>${docker.registry}/heuboe/c2vba/datex2/${project.artifactId}:${project.version}</image>
					</to>
					<container>
						<jvmFlags>
							<!-- Flags für Spring -->
							<jvmFlag>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmFlag>
							<jvmFlag>-Dlogging.config=/config/log4j2.xml</jvmFlag>
							<jvmFlag>-Dspring.config.location=file:/config/</jvmFlag>
							<!-- Do not add flags such as -Xmx2G or other parameters here that 
								might be changed later on -->
						</jvmFlags>
						<mainClass>${mainClass}</mainClass>
						<ports>
							<!-- Ports with their function -->
							<port>8080</port><!-- actuator -->
						</ports>
						<labels>
							<version>${project.version}</version>
							<build.timestamp>${maven.build.timestamp}</build.timestamp>
							<!-- Metadata-derived from the git-commit-id-plugin -->
							<git.tags>${git.tags}</git.tags>
							<git.commit.id.abbrev>${git.commit.id.abbrev}</git.commit.id.abbrev>
							<git.commit.timestamp>${git.commit.time}</git.commit.timestamp>
						</labels>
						<creationTime>USE_CURRENT_TIMESTAMP</creationTime>
						<filesModificationTime>${git.commit.time}</filesModificationTime>
					</container>
				</configuration>
			</plugin>
			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>revision</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<verbose>false</verbose>
					<skipPoms>false</skipPoms>
					<dateFormat>yyyy-MM-dd'T'HH:mm:ss'Z'</dateFormat><!-- Required for dockering -->
					<dateFormatTimeZone>UTC</dateFormatTimeZone><!-- Required for dockering -->
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
					<failOnNoGitDirectory>false</failOnNoGitDirectory>
					<failOnUnableToExtractRepoInfo>false</failOnUnableToExtractRepoInfo>
					<excludeProperties>
						<!-- Requested to be excluded by colleague -->
						<excludeProperty>.*\.user\..*</excludeProperty>
						<!-- same here and we already have other build information files -->
						<excludeProperty>.*\.build\..*</excludeProperty>
					</excludeProperties>
				</configuration>
			</plugin>
  
		</plugins>
	</build>
	
</project>